# skill-diffs

./: .gitignore  README.md  TRAINING.md  add_injection_tag.py  add_licenses.py  add_platform.py  add_quality_score.py  add_quality_v041.py  add_semantic_clusters.py  add_semantic_diff.py  aggregate_bundled.py  analyze.py  batch.py  batch_v04.py  build_dataset.py  build_eval_set.py  classify.py  consolidate.py  consolidate_v04.py  curator_subset.py  discover.py  discover_cursor.py  discover_v04.py  embed_cluster.py  enrich_v03.py  eval_curator.py  extract.py  extract_bundled.py  extract_cursor.py  fetch_huzey_repos.py  filter_quality.py  finish_openclaw.sh  finish_v04.sh  finish_v05.sh  finish_v05_final.sh  finish_v05_v2.sh  join_pr_metadata.py  llm_classify.py  merge_v04.py  monitor.sh  (+7 more)
